[tool.poetry]
name = "blackbird"
version = "0.1.0"
description = ""
authors = ["HelloRusk <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
beautifulsoup4 = "4.11.1"
colorama = "0.4.4"
Flask = "2.1.1"
Flask-Cors = "3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
